--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- image icon  -->
+        <link rel="icon" href="./Image/shopping-bag.png">
+        <!-- custom css file link  -->
+        <link rel="stylesheet" href="./CSS/style.css" />
         <title>Grocery Shop</title>
-    </head>
+        
+     </head>
+     <body>
+          <!-- Hearder Content 0 --> 
+        <header>
+            <div class="page-heading">
+                Freedom Sale: Up to 50% OFF|<span style="color: red">&nbsp;Shop Now.</span>
+            </div>
+        </header>
+
+        <!-- Naviation starts -->
+         <header>
+            <nav>
+            <div class="navbar">
+                <a href="./index.html"><b>Home</b></a>
+                <a href="./pages/aboutus.html"><b>About Us</b></a>
+                <a href="./pages/product.html"><b>Product</b></a>
+                <a href="./pages/review.html"><b>Review</b></a>
+                <a href="./pages/sign up.html"><b>Sign Up</b></a>
+            </div>
+            </nav>
+         </header> 
+        
+     </body>
 </html>
