--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
         </header>
 
         <!-- Naviation starts -->
-         <header>
             <nav>
             <div class="navbar">
                 <a href="./index.html"><b>Home</b></a>
@@ -29,7 +28,23 @@
                 <a href="./pages/sign up.html"><b>Sign Up</b></a>
             </div>
             </nav>
-         </header> 
+        
+            <!--header contain -->
+            <header>
+                <section class="headcont">
+                    <div>
+                        <p class="text">
+                            Good food, good mood.
+                        </p>
+                        <img 
+                          src="./Image/main-image.jpg"
+                          alt="header image"
+                          height="500px"
+                          width="100%"
+                        />
+                    </div>
+                </section>
+            </header>
         
      </body>
 </html>
